k8s/base/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: shopsimple
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: shopsimple
    app.kubernetes.io/component: frontend
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: shopsimple
    app.kubernetes.io/component: frontend
